minor changes to notebook

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -57,6 +57,7 @@
     "    # Clone github repository\n",
     "    from os.path import join  \n",
     "    GIT_USERNAME = \"chriscurrin\"\n",
+    "    # TODO: remove this from github before publishing\n",
     "    GIT_TOKEN = \"bbf24b4521d81a3893d6c93eb806d41b47322a33\"  \n",
     "    GIT_REPOSITORY = \"opinion_dynamics\" \n",
     "    GIT_PATH = \"https://\" + GIT_TOKEN + \"@github.com/\" + GIT_USERNAME + \"/\" + GIT_REPOSITORY + \".git\"\n",
@@ -368,7 +369,9 @@
    },
    "outputs": [],
    "source": [
-    "ec.run_network(dt=0.01, t_end=0.5, method='Euler')"
+    "dt = 0.01\n",
+    "T = 0.5\n",
+    "ec.run_network(dt=dt, t_end=T, method='Euler')"
    ]
   },
   {
@@ -422,7 +425,7 @@
     "new_ec.set_connection_probabilities(beta=beta)\n",
     "new_ec.set_social_interactions(0.5, lazy=True) # note only the `r` is the important parameter\n",
     "new_ec.set_dynamics()\n",
-    "new_ec.load()"
+    "new_ec.load(dt, T)"
    ]
   },
   {
