--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -88,7 +88,8 @@
     "    # need latest tqdm version for tenumerate\n",
     "    !pip install --upgrade tqdm \n",
     "    # create symlink between a Drive folder and the cache for persistence between sessions\n",
-    "    !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics\" \".cache\"\n",
+    "    !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics/.cache\" \".cache\"\n",
+    "    !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics/output\" \"output\"\n",
     "except ModuleNotFoundError:\n",
     "    print(\"local notebook\")\n",
     "    pass"
@@ -957,7 +958,7 @@
     "    df = pd.read_hdf(file_name)\n",
     "else:\n",
     "    df = pd.DataFrame(index=K_range, columns=alpha_range, dtype=float)\n",
-    "    for K,alpha in tqdm(itertools.product(K_range,alpha_range)):\n",
+    "    for K,alpha in tqdm(list(itertools.product(K_range,alpha_range))):\n",
     "        ec = Simulation.run_params(EchoChamber,N=N, m=m, K=K, alpha=alpha, beta=beta, \n",
     "                                   activity=activity_distribution, epsilon=epsilon, gamma=gamma, r=r,\n",
     "                                   dt=dt, T=T, \n",
@@ -986,7 +987,9 @@
    },
    "outputs": [],
    "source": [
-    "show_K_alpha_phase(df)"
+    "show_K_alpha_phase(df)\n",
+    "fig = plt.gcf()\n",
+    "fig.savefig(\"output/k-alpha-phase.pdf\")"
    ]
   },
   {
@@ -1455,7 +1458,19 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "61d24093f1a44710b1dcf2f04daab448"
+       "model_id": "f1f6d4a766364162968e94771128f99a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=1001.0, style=ProgressStyle(description_widt…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "4b453fd7c3d74b7492805baa08baaf8c"
       }
      },
      "metadata": {},
@@ -1465,54 +1480,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:echo chamber:done running D=0\n",
-      "DEBUG:echo chamber:D=0 loaded from .cache\\1577947048511525592.h5\n",
-      "INFO:echo chamber:done running D=0.01\n",
-      "DEBUG:echo chamber:D=0.01 loaded from .cache\\913977921133531422.h5\n",
-      "INFO:echo chamber:done running D=0.1\n",
-      "DEBUG:echo chamber:D=0.1 saved to .cache\\1354159986895476309.h5\n",
-      "INFO:echo chamber:done running D=1\n",
-      "DEBUG:echo chamber:D=1 saved to .cache\\1160575901002842487.h5\n",
-      "INFO:echo chamber:done running D=10\n",
-      "DEBUG:echo chamber:D=10 saved to .cache\\1733968768869166786.h5\n",
-      "INFO:echo chamber:done running D=0\n",
-      "DEBUG:echo chamber:D=0 saved to .cache\\1577947048511525592.h5\n",
-      "INFO:echo chamber:done running D=0.01\n",
-      "DEBUG:echo chamber:D=0.01 saved to .cache\\913977921133531422.h5\n",
-      "INFO:echo chamber:done running D=0.1\n",
-      "DEBUG:echo chamber:D=0.1 saved to .cache\\1354159986895476309.h5\n",
-      "INFO:echo chamber:done running D=1\n",
-      "DEBUG:echo chamber:D=1 saved to .cache\\1160575901002842487.h5\n",
-      "INFO:echo chamber:done running D=10\n",
-      "DEBUG:echo chamber:D=10 saved to .cache\\1733968768869166786.h5\n",
-      "INFO:echo chamber:done running D=0\n",
-      "DEBUG:echo chamber:D=0 saved to .cache\\1577947048511525592.h5\n",
-      "INFO:echo chamber:done running D=0.01\n",
-      "DEBUG:echo chamber:D=0.01 saved to .cache\\913977921133531422.h5\n",
-      "INFO:echo chamber:done running D=0.1\n",
-      "DEBUG:echo chamber:D=0.1 saved to .cache\\1354159986895476309.h5\n",
-      "INFO:echo chamber:done running D=1\n",
-      "DEBUG:echo chamber:D=1 saved to .cache\\1160575901002842487.h5\n"
+      "INFO:echo chamber:done running D=0 dt=0.00100\n",
+      "DEBUG:echo chamber:D=0 dt=0.00100 saved to .cache\\1140455030629541355.h5\n",
+      "INFO:echo chamber:done running D=0.01 dt=0.00100\n",
+      "DEBUG:echo chamber:D=0.01 dt=0.00100 saved to .cache\\611042985978523160.h5\n",
+      "INFO:echo chamber:done running D=0.1 dt=0.00100\n",
+      "DEBUG:echo chamber:D=0.1 dt=0.00100 saved to .cache\\1785225660432365432.h5\n",
+      "INFO:echo chamber:done running D=1 dt=0.00100\n",
+      "DEBUG:echo chamber:D=1 dt=0.00100 saved to .cache\\1196378135912410854.h5\n",
+      "INFO:echo chamber:done running D=10 dt=0.00100\n",
+      "DEBUG:echo chamber:D=10 dt=0.00100 saved to .cache\\2167000488303345405.h5\n",
+      "INFO:echo chamber:done running D=0 dt=0.00200\n",
+      "DEBUG:echo chamber:D=0 dt=0.00200 saved to .cache\\860232876207113635.h5\n",
+      "INFO:echo chamber:done running D=0.01 dt=0.00200\n",
+      "DEBUG:echo chamber:D=0.01 dt=0.00200 saved to .cache\\1041874678398170103.h5\n",
+      "INFO:echo chamber:done running D=0.1 dt=0.00200\n",
+      "DEBUG:echo chamber:D=0.1 dt=0.00200 saved to .cache\\1512438635202609369.h5\n",
+      "INFO:echo chamber:done running D=1 dt=0.00200\n",
+      "DEBUG:echo chamber:D=1 dt=0.00200 saved to .cache\\1286055397051851498.h5\n",
+      "INFO:echo chamber:done running D=10 dt=0.00200\n",
+      "DEBUG:echo chamber:D=10 dt=0.00200 saved to .cache\\1430892010579620912.h5\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=1001.0, style=ProgressStyle(description_widt…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "227f02f26ab448d98eff1c98965a6b5a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -1531,7 +1524,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "bde286fff1634852b4feb28f2e7d7d1c"
+       "model_id": "8248e3b76adf4af38b64c60dbcfe1252"
       }
      },
      "metadata": {},
@@ -1543,7 +1536,31 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b1cbcaae6eab411ab9a588d09c2caa69"
+       "model_id": "7f7d2c22332b4f97bf059ec1e98953b3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=1001.0, style=ProgressStyle(description_widt…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a58d30d95d8e4664b9bc8826c1529e64"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=1001.0, style=ProgressStyle(description_widt…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "442338ae1b15419091d0a0da70b47662"
       }
      },
      "metadata": {},
@@ -1555,7 +1572,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fadb1f117bdb4039b77b7d1176559d01"
+       "model_id": "7308a5c00d974774adcca0aca134f13d"
       }
      },
      "metadata": {},
@@ -1567,7 +1584,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e32dd48a0d3e41479f64b644ba670071"
+       "model_id": "aaf88393cfbe490da472aaec57831b2c"
       }
      },
      "metadata": {},
@@ -1579,7 +1596,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b8b6ec936c1a4dbb8f879d61e432448d"
+       "model_id": "a5267d9ddeae4e3caa0a9d53e76325ed"
       }
      },
      "metadata": {},
@@ -1591,7 +1608,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2256c578814c41e7af434e67fd72ad46"
+       "model_id": "7ea957b1e073450aaa8ab378d941f2fd"
       }
      },
      "metadata": {},
@@ -1603,7 +1620,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "53645890ab7f465592d5e0c2901e62ad"
+       "model_id": "c281d553a917476bae4608ada9218b3d"
       }
      },
      "metadata": {},
@@ -1615,55 +1632,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "98bbdec404534aba9f4dcc85c0e5fa29"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=335.0, style=ProgressStyle(description_width…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "93951564331542d991cbf0c30b3d89a4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=335.0, style=ProgressStyle(description_width…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "4bb44dad04434a80ae56476ef56f4b0d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=335.0, style=ProgressStyle(description_width…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "6220dba087a84153bde45d2dba9b8c4d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "HBox(children=(FloatProgress(value=0.0, description='solver', max=335.0, style=ProgressStyle(description_width…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3fdaf472c5e8426b932032b56b1186ce"
+       "model_id": "f8de22e81f034abdb9e23e918d03c309"
       }
      },
      "metadata": {},
@@ -1671,6 +1640,7 @@
     }
    ],
    "source": [
+    "from matplotlib.cbook import flatten\n",
     "from tqdm.notebook import tqdm\n",
     "# suppress logging for clean progressbar\n",
     "logging_level = logging.getLogger().getEffectiveLevel()\n",
@@ -1693,12 +1663,18 @@
     "\n",
     "for i, dt in tqdm(enumerate(dt_range)):\n",
     "    kwargs[\"dt\"] = dt\n",
-    "    nec_arr = Simulation.run_noise_range(D_range, plot_opinion=(fig, ax[:, i]), **kwargs)\n",
-    "    ax[0,i].set_title(f\"dt = {dt:.3f}\")\n",
-    "fig.subpots_adjust(hspace=0,wspace=0)\n",
-    "\n",
-    "#sns.despine(left=True,bottom=True, labelbottom=True, labelleft=True)\n",
-    "\n",
+    "    nec_arr = Simulation.run_noise_range(D_range, plot_opinion=(fig, ax[:, i]),\n",
+    "                                         name=f\"dt={dt:.5f}\",\n",
+    "                                         **kwargs)\n",
+    "    ax[0,i].set_title(f\"{dt:.3f}\")\n",
+    "fig.subptitle(\"dt\")\n",
+    "fig.subplots_adjust(hspace=0,wspace=0)\n",
+    "for _ax in flatten(ax[1:,:]):\n",
+    "    _ax.set_ylabel(\"\")\n",
+    "for _ax in fig.axes:\n",
+    "    _ax.set_facecolor(\"None\")\n",
+    "    sns.despine(ax=_ax, bottom=True, left=True)\n",
+    "    _ax.tick_params(bottom=False, left=False, labelleft=False)\n",
     "logging.getLogger().setLevel(logging_level)"
    ]
   },
@@ -1720,6 +1696,7 @@
    },
    "outputs": [],
    "source": [
+    "from matplotlib.cbook import flatten\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "# suppress logging for clean progressbar\n",
@@ -1744,13 +1721,15 @@
     "for i, beta in tqdm(enumerate(beta_range)):\n",
     "    kwargs[\"beta\"] = beta\n",
     "    nec_arr = Simulation.run_noise_range(D_range, plot_opinion=(fig, ax[:, i]), **kwargs)\n",
-    "    ax[0,i].set_title(f\"beta = {beta:.3f}\")\n",
-    "    \n",
+    "    ax[0,i].set_title(f\"{beta:.3f}\")\n",
+    "fig.suptitle(\"$\\beta$\")\n",
     "fig.subplots_adjust(hspace=-0.5)\n",
-    "for ax in fig.axes:\n",
-    "    ax.set_facecolor(\"None\")\n",
-    "    sns.despine(ax=ax, bottom=True, left=True)\n",
-    "    ax.tick_params(bottom=False, left=False, labelleft=False)\n",
+    "for _ax in flatten(ax[1:,:]):\n",
+    "    _ax.set_ylabel(\"\")\n",
+    "for _ax in fig.axes:\n",
+    "    _ax.set_facecolor(\"None\")\n",
+    "    sns.despine(ax=_ax, bottom=True, left=True)\n",
+    "    _ax.tick_params(bottom=False, left=False, labelleft=False)\n",
     "fig.savefig(\"output/beta.pdf\")\n",
     "\n",
     "logging.getLogger().setLevel(logging_level)"
@@ -1775,6 +1754,7 @@
    },
    "outputs": [],
    "source": [
+    "from matplotlib.cbook import flatten\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "# suppress logging for clean progressbar\n",
@@ -1799,14 +1779,15 @@
     "for i, alpha in tqdm(enumerate(alpha_range)):\n",
     "    kwargs[\"alpha\"] = alpha\n",
     "    nec_arr = Simulation.run_noise_range(D_range, plot_opinion=(fig, ax[:, i]), **kwargs)\n",
-    "    ax[0,i].set_title(f\"alpha = {alpha:.3f}\")\n",
-    "    \n",
+    "    ax[0,i].set_title(f\"{alpha:.3f}\")\n",
+    "fig.suptitle(\"$\\alpha$\")\n",
     "fig.subplots_adjust(hspace=-0.5)\n",
-    "\n",
-    "for ax in fig.axes:\n",
-    "    ax.set_facecolor(\"None\")\n",
-    "    sns.despine(ax=ax, bottom=True, left=True)\n",
-    "    ax.tick_params(bottom=False, left=False, labelleft=False)\n",
+    "for _ax in flatten(ax[1:,:]):\n",
+    "    _ax.set_ylabel(\"\")\n",
+    "for _ax in fig.axes:\n",
+    "    _ax.set_facecolor(\"None\")\n",
+    "    sns.despine(ax=_ax, bottom=True, left=True)\n",
+    "    _ax.tick_params(bottom=False, left=False, labelleft=False)\n",
     "fig.savefig(\"output/alpha.pdf\")\n",
     "\n",
     "logging.getLogger().setLevel(logging_level)\n"
