periodic noise bug fix

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -135,8 +135,10 @@
     "\n",
     "from opdynamics.utils.distributions import negpowerlaw\n",
     "from opdynamics.utils.plot_utils import move_cbar_label_to_title\n",
-    "\n",
-    "import opdynamics.simulation as Simulation\n",
+    "try:\n",
+    "    import opdynamics.simulation as Simulation\n",
+    "except AttributeError:\n",
+    "    print(\"restart runtime\")\n",
     "from opdynamics.dynamics.echochamber import EchoChamber, NoisyEchoChamber, logger as eclogger\n",
     "from opdynamics.visualise.visechochamber import VisEchoChamber\n",
     "from opdynamics.visualise.dense import show_K_alpha_phase, show_activity_vs_opinion\n",
@@ -2762,7 +2764,8 @@
     "D_range = [0, 0.01, 0.1, 0.5, 1.0]\n",
     "alpha_range = [0.001, 1, 2, 3]\n",
     "Simulation.run_noise_other_range(D_range, \"alpha\", alpha_range,\n",
-    "                                 plot_opinion=True, title=\"$\\\\alpha$\")\n",
+    "                                 plot_opinion=True, title=\"$\\\\alpha$\",\n",
+    "                                 subplot_kws=dict(sharex='all', sharey='col'))\n",
     "fig = plt.gcf()\n",
     "fig.savefig(\"output/alpha.pdf\")\n",
     "\n",
