--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2268,7 +2268,7 @@
     "dt_range = np.arange(0.001, 0.01+0.001, 0.001)\n",
     "Simulation.run_noise_other_range(D_range, \"dt\", dt_range,\n",
     "                                 plot_opinion=True, title=\"dt\",\n",
-    "                                 label_precision=3)\n",
+    "                                 label_precision=3, **kwargs)\n",
     "fig = plt.gcf()\n",
     "fig.savefig(\"output/dt.pdf\")\n",
     "logging.getLogger().setLevel(logging_level)"
@@ -2385,7 +2385,8 @@
     "\n",
     "Simulation.run_noise_other_range(D_range, \"beta\", beta_range,\n",
     "                                 plot_opinion=True, title=\"$\\\\beta$\",\n",
-    "                                 subplot_kws=dict(sharex='all', sharey='col'))\n",
+    "                                 subplot_kws=dict(sharex='all', sharey='col'),\n",
+    "                                 **kwargs)\n",
     "fig = plt.gcf()\n",
     "fig.savefig(\"output/beta.pdf\")\n",
     "\n",
@@ -2765,7 +2766,8 @@
     "alpha_range = [0.001, 1, 2, 3]\n",
     "Simulation.run_noise_other_range(D_range, \"alpha\", alpha_range,\n",
     "                                 plot_opinion=True, title=\"$\\\\alpha$\",\n",
-    "                                 subplot_kws=dict(sharex='all', sharey='col'))\n",
+    "                                 subplot_kws=dict(sharex='all', sharey='col'),\n",
+    "                                 **kwargs)\n",
     "fig = plt.gcf()\n",
     "fig.savefig(\"output/alpha.pdf\")\n",
     "\n",
@@ -2798,7 +2800,7 @@
     "              activity_distribution = negpowerlaw,\n",
     "              epsilon=1e-2,\n",
     "              gamma=2.1,\n",
-    "              dt=0.001,\n",
+    "              dt=0.01,\n",
     "              K=3,\n",
     "              beta=3,\n",
     "              alpha=3,\n",
