quick bug fix for saving only last time point

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -130,7 +130,7 @@
     "try:\n",
     "    import opdynamics.simulation as Simulation\n",
     "except AttributeError:\n",
-    "    print(\"restart runtime\")\n",
+    "    raise RuntimeError(\"restart runtime\")\n",
     "from opdynamics.dynamics.echochamber import EchoChamber, NoisyEchoChamber, logger as eclogger\n",
     "from opdynamics.visualise.visechochamber import VisEchoChamber\n",
     "from opdynamics.visualise.dense import show_K_alpha_phase, show_activity_vs_opinion\n",
