--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -1172,9 +1172,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T10:31:20.762241Z",
-     "start_time": "2020-05-29T10:23:51.243Z"
-    }
+     "end_time": "2020-05-29T12:03:37.318759Z",
+     "start_time": "2020-05-29T12:01:36.869834Z"
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
