minor bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -80,6 +80,7 @@
     "    # need latest tqdm version for tenumerate\n",
     "    !pip install --upgrade tqdm\n",
     "    # create symlink between a Drive folder and the cache for persistence between sessions\n",
+    "    import os\n",
     "    try:\n",
     "        os.makedirs(\"/content/drive/My Drive/Colab Notebooks/opdynamics/.cache\")\n",
     "        os.makedirs(\"/content/drive/My Drive/Colab Notebooks/opdynamics/output\")\n",
