--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -52,8 +52,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T09:10:28.238127Z",
-     "start_time": "2020-06-07T09:10:26.422125Z"
+     "end_time": "2020-06-09T21:49:46.646646Z",
+     "start_time": "2020-06-09T21:49:41.794645Z"
     },
     "init_cell": true
    },
@@ -105,8 +105,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T09:10:30.171136Z",
-     "start_time": "2020-06-07T09:10:28.246126Z"
+     "end_time": "2020-06-09T21:49:51.187642Z",
+     "start_time": "2020-06-09T21:49:46.652645Z"
     },
     "init_cell": true,
     "pycharm": {
@@ -139,8 +139,13 @@
     "except AttributeError:\n",
     "    raise RuntimeError(\"restart runtime\")\n",
     "from opdynamics.dynamics.echochamber import EchoChamber, NoisyEchoChamber, logger as eclogger\n",
-    "from opdynamics.visualise.visechochamber import VisEchoChamber\n",
-    "from opdynamics.visualise.dense import show_K_alpha_phase, show_activity_vs_opinion, show_jointplot\n",
+    "from opdynamics.visualise import (VisEchoChamber,\n",
+    "                                  show_K_alpha_phase,\n",
+    "                                  show_activity_vs_opinion,\n",
+    "                                  show_jointplot,\n",
+    "                                  show_noise_panel,\n",
+    "                                  show_noise_grid,\n",
+    "                                  )\n",
     "\n",
     "from opdynamics.utils.constants import *\n",
     "\n",
@@ -148,11 +153,16 @@
     "    os.makedirs(\"output\")\n",
     "except FileExistsError:\n",
     "    pass\n",
+    "try:\n",
+    "    os.makedirs(\".cache\")\n",
+    "except FileExistsError:\n",
+    "    pass\n",
     "\n",
     "np.random.seed(1337)\n",
     "sns.set_context(\"notebook\")\n",
     "logging.basicConfig(level=logging.DEBUG)\n",
     "logging.getLogger().setLevel(logging.DEBUG)\n",
+    "eclogger.setLevel(logging.DEBUG)\n",
     "logging.getLogger('matplotlib').setLevel(logging.INFO)"
    ]
   },
@@ -1157,7 +1167,8 @@
     "    del df_ao\n",
     "\n",
     "    # nearest neighbour\n",
-    "    custom_joint(ec_polar.opinions, ec_polar.get_nearest_neighbours(), ax=(ax_joint, ax_marg_x, ax_marg_y))\n",
+    "    show_jointplot(ec_polar.opinions, ec_polar.get_nearest_neighbours(),\n",
+    "                   ax=(ax_joint, ax_marg_x, ax_marg_y))\n",
     "\n",
     "    # cleaning\n",
     "    ax_trace_1.set_ylim(-5, 5)\n",
@@ -1225,7 +1236,7 @@
     "              T=5,\n",
     "              epsilon=1e-2,\n",
     "              gamma=2.1,\n",
-    "              dt=0.005,\n",
+    "              dt=0.01,\n",
     "              K=2,\n",
     "              beta=1,\n",
     "              alpha=3,\n",
@@ -1515,11 +1526,9 @@
    "source": [
     "Noise comes from exposing each agent to a random other agent, $x_k$) for $k$ time steps.\n",
     "\n",
-    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D (x_i(t)-x_k(t))$\n",
+    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D (\\tanh(\\alpha_2 (x_i(t)-x_k(t))))$\n",
     "\n",
-    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D (\\tanh(x_i(t)-x_k(t)))$\n",
-    "\n",
-    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D (x_i(t)-\\tanh(x_k(t)))$"
+    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D (-\\tanh(\\alpha_2 x_k(t)))$"
    ]
   },
   {
@@ -1527,8 +1536,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T16:47:11.602437Z",
-     "start_time": "2020-06-06T16:45:21.617445Z"
+     "end_time": "2020-06-09T16:53:19.991263Z",
+     "start_time": "2020-06-09T16:30:04.149Z"
     }
    },
    "outputs": [],
@@ -1542,28 +1551,13 @@
     "              beta=1,\n",
     "              alpha=3,\n",
     "              r=0.65,\n",
+    "              alpha_2=1,\n",
     "             )\n",
     "ec_i_noise = Simulation.run_params(NoisyEchoChamber, **kwargs, \n",
     "                                   dt=0.01,\n",
-    "                                   D=0.001,\n",
-    "                                   k_steps=10,\n",
-    "                                   noise_source=INTERNAL_NOISE,\n",
-    "                                   plot_opinion=True,\n",
-    "                                   cache=\"all\")\n",
-    "sns.despine()\n",
-    "ec_i_noise = Simulation.run_params(NoisyEchoChamber, **kwargs, \n",
-    "                                   dt=0.01,\n",
-    "                                   D=0.005,\n",
+    "                                   D=0.1,\n",
     "                                   k_steps=10,\n",
     "                                   noise_source=INTERNAL_NOISE_SIG,\n",
-    "                                   plot_opinion=True,\n",
-    "                                   cache=\"all\")\n",
-    "sns.despine()\n",
-    "ec_i_noise = Simulation.run_params(NoisyEchoChamber, **kwargs, \n",
-    "                                   dt=0.01,\n",
-    "                                   D=0.001,\n",
-    "                                   k_steps=10,\n",
-    "                                   noise_source=INTERNAL_NOISE_SIG_K,\n",
     "                                   plot_opinion=True,\n",
     "                                   cache=\"all\")\n",
     "sns.despine()"
@@ -1593,7 +1587,7 @@
     "              beta=1,\n",
     "              alpha=3,\n",
     "              r=0.65,\n",
-    "              noise_source=INTERNAL_NOISE,\n",
+    "              noise_source=INTERNAL_NOISE_SIG,\n",
     "              k_steps=10,\n",
     "             )\n",
     "D_range = [0, 0.005, 0.01]\n",
@@ -1621,14 +1615,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-07T10:21:57.906013Z",
-     "start_time": "2020-06-07T10:21:06.805307Z"
+     "end_time": "2020-06-09T17:07:10.145233Z",
+     "start_time": "2020-06-09T16:59:09.207629Z"
     }
    },
    "outputs": [],
    "source": [
-    "from opdynamics.visualise import show_noise_panel\n",
-    "\n",
     "kwargs = dict(N=1000,\n",
     "              m=10,\n",
     "              T=10,\n",
@@ -1639,33 +1631,78 @@
     "              beta=1,\n",
     "              alpha=3,\n",
     "              r=0.65,\n",
-    "              noise_source=INTERNAL_NOISE,\n",
+    "              noise_source=INTERNAL_NOISE_SIG,\n",
     "              k_steps=10,\n",
     "             )\n",
     "\n",
-    "D_range = np.round(np.arange(0.000, 0.01, 0.002), 3)\n",
+    "D_range = np.append(np.round(np.arange(0.0, 0.1, 0.025), 3),\n",
+    "                    np.round(np.arange(0.1, 1.0, 0.050), 3))\n",
     "\n",
     "other_vars = {\n",
     "    'k_steps':{\n",
-    "        'range':[1, 10, 100],\n",
+    "        'range':[1, 10, 50, 100],\n",
     "        'title':'k',\n",
     "    },\n",
-    "    'noise_source':{\n",
-    "        'range':[INTERNAL_NOISE, INTERNAL_NOISE_SIG, INTERNAL_NOISE_SIG_K],\n",
-    "        'title':'noise source',\n",
+    "    'alpha_2':{\n",
+    "        'range':[0.05, 0.1, 0.5, 1, 5],\n",
+    "        'title':'$\\alpha_2$',\n",
     "    },\n",
     "}\n",
     "# suppress logging for clean progressbar\n",
     "logging_level = logging.getLogger().getEffectiveLevel()\n",
     "logging.getLogger().setLevel(logging.WARNING)\n",
     "noise_start = 0\n",
-    "print(f\"running noise at T{noise_start} vs {key}\")\n",
+    "            \n",
     "df = Simulation.run_noise_product(D_range, other_vars, \n",
-    "                                  plot_opinion=True, \n",
-    "                                  noise_start=noise_start, **kwargs)\n",
+    "                                  noise_start=noise_start, \n",
+    "                                  **kwargs)\n",
+    "\n",
+    "g = show_noise_grid(df, list(other_vars.keys()))\n",
+    "g.set(xlim=(-10,10))\n",
+    "\n",
     "fig = plt.gcf()\n",
     "\n",
     "logging.getLogger().setLevel(logging_level)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-09T17:10:02.456922Z",
+     "start_time": "2020-06-09T17:09:40.165598Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data_kwargs = dict(zip([\"col\", \"row\", \"hue\"], list(other_vars)))\n",
+    "g = sns.FacetGrid(df[np.logical_and(df['D']>0.01, df['D']<1)], **data_kwargs)\n",
+    "g.map(sns.kdeplot, \"opinion\", \"D\",\n",
+    "      cmap=sns.cubehelix_palette(reverse=True, as_cmap=True), shade=True, shade_lowest=False)\n",
+    "g.map(sns.scatterplot, \"opinion\", \"D\",\n",
+    "      color='k', alpha=0.5, ec='None', s=1)\n",
+    "g.set(xlim=(-7,7), ylim=(0, 0.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-09T16:57:05.927110Z",
+     "start_time": "2020-06-09T16:55:44.663069Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data_kwargs = dict(zip([\"col\", \"row\", \"hue\"], list(other_vars)))\n",
+    "g = sns.FacetGrid(df[np.logical_and(df['D']>=0.0, df['D']<0.1)], **data_kwargs)\n",
+    "g.map(sns.kdeplot, \"opinion\", \"D\",\n",
+    "      cmap=sns.cubehelix_palette(reverse=True, as_cmap=True), shade=True, shade_lowest=False)\n",
+    "g.map(sns.scatterplot, \"opinion\", \"D\",\n",
+    "      color='k', alpha=0.5, ec='None', s=1)\n",
+    "g.set(xlim=(-7,7), ylim=(0, 0.01))"
    ]
   },
   {
@@ -1776,7 +1813,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "240.667px"
+    "width": "246.641px"
    },
    "toc_section_display": true,
    "toc_window_display": true
