--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -1708,6 +1708,8 @@
    },
    "outputs": [],
    "source": [
+    "logging_level = logging.getLogger().getEffectiveLevel()\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
     "kwargs = dict(N=1000,\n",
     "              m=10,\n",
     "              T=10,\n",
@@ -1725,6 +1727,10 @@
     "D_range = np.round(np.arange(0.0, 0.5, 0.05), 3)\n",
     "\n",
     "other_vars = {\n",
+    "    'D':{\n",
+    "        'range': D_range,\n",
+    "        'title': 'D',\n",
+    "    },\n",
     "    'k_steps':{\n",
     "        'range':[1, 100],\n",
     "        'title':'k',\n",
@@ -1739,9 +1745,9 @@
     "logging.getLogger().setLevel(logging.WARNING)\n",
     "noise_start = 0\n",
     "            \n",
-    "df = Simulation.run_noise_product(D_range, other_vars, \n",
-    "                                  noise_start=noise_start, \n",
-    "                                  **kwargs)\n",
+    "df = Simulation.run_product(other_vars,\n",
+    "                            noise_start=noise_start,\n",
+    "                            **kwargs)\n",
     "logging.getLogger().setLevel(logging_level)"
    ]
   },
@@ -1776,33 +1782,6 @@
     "g = show_noise_grid(df, list(other_vars.keys()),\n",
     "                    grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
     "g.map(sns.scatterplot, \"opinion\", \"D\", color='k', alpha=0.5, ec='None', s=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Delayed noise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# equal time no-noise and noise\n",
-    "noise_start = kwargs['T']\n",
-    "print(f\"running noise at T{noise_start} vs {key}\")\n",
-    "nec_arrs, df = Simulation.run_noise_product(D_range, key, other['range'],\n",
-    "                                                noise_start=noise_start, \n",
-    "                                                plot_opinion=True, title=f\"{other['title']} $T_D={noise_start}$\",\n",
-    "                                                subplot_kws=dict(sharex='all', sharey='col'),\n",
-    "                                                **kwargs)\n",
-    "fig = plt.gcf()\n",
-    "fig.savefig(f\"output/internal_{key}_T{noise_start}.pdf\")\n",
-    "g = show_noise_panel(df, other)\n",
-    "g.savefig(f\"output/internal_{key}_T{noise_start}_grid.pdf\")\n"
    ]
   },
   {
@@ -1982,22 +1961,26 @@
     "dt = 0.01\n",
     "T = 10\n",
     "\n",
-    "D = 10\n",
-    "sample_size = 30\n",
+    "D = 20 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
+    "sample_size = 50 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "\n",
-    "sc = SampleChamber(num_agents, m, K, alpha)\n",
-    "sc.set_activities(activity_distribution, gamma, epsilon)\n",
-    "sc.set_connection_probabilities(beta)\n",
-    "sc.set_social_interactions(r)\n",
-    "sc.set_dynamics(D, sample_size)\n",
-    "sc.run_network(dt, T, method='Euler')\n",
+    "iterations = 5 #@param {type:\"slider\", min:1, max:20, step:1}\n",
     "\n",
-    "vis = VisEchoChamber(sc)\n",
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
-    "\n",
-    "vis.show_opinions(color_code='line', ax=ax[0])\n",
     "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
-    "vis.show_opinions_snapshot(ax=ax[1], vertical=True, kde_kws=dict(bw=0.1))\n",
+    "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
+    "for i in range(iterations):\n",
+    "    sc = SampleChamber(num_agents, m, K, alpha)\n",
+    "    sc.set_activities(activity_distribution, gamma, epsilon)\n",
+    "    sc.set_connection_probabilities(beta)\n",
+    "    sc.set_social_interactions(r)\n",
+    "    sc.set_dynamics(D, sample_size)\n",
+    "    sc.run_network(dt, T, method='Euler')\n",
+    "\n",
+    "    vis = VisEchoChamber(sc)\n",
+    "    vis.show_opinions(color_code='line', ax=ax[0])\n",
+    "    vis.show_opinions_snapshot(ax=ax[1], vertical=True,\n",
+    "                             kde_kws=dict(bw=0.1, color=palette[i]))\n",
     "\n",
     "ax[0].set_ylim(-5,5)\n"
    ],
@@ -2017,9 +2000,16 @@
     "\n",
     "from opdynamics.utils.accuracy import precision_and_scale\n",
     "\n",
-    "D = 10 #@param {type:\"slider\", min:0.2, max:20, step:0.2}\n",
-    "D2 = 1 #@param {type:\"slider\", min:0.1, max:2, step:0.1}\n",
+    "sc = SampleChamber(num_agents, m, K, alpha)\n",
+    "\n",
+    "D_xi = 1 #@param {type:\"slider\", min:0.1, max:2, step:0.1}\n",
+    "\n",
+    "nudge = 10 #@param {type:\"slider\", min:0.2, max:20, step:0.2}\n",
     "alpha_2 = 0.1 #@param {type:\"slider\", min:0.1, max:10, step:0.1}\n",
+    "\n",
+    "D_sample = 1 #@param {type:\"slider\", min:0.1, max:2, step:0.1}\n",
+    "sample_size = 20 #@param {type:\"slider\", min:1, max:100, step:1}\n",
+    "\n",
     "\n",
     "T = 1.01 #@param {type:\"slider\", min:0.01, max:10, step:0.05}\n",
     "dt = 0.01\n",
@@ -2029,11 +2019,20 @@
     "N = 1000\n",
     "xi = np.random.random(N)\n",
     "xi2 = np.copy(xi)\n",
+    "xi3 = np.copy(xi)\n",
+    "xi4 = np.copy(xi)\n",
     "_idx = None\n",
     "\n",
     "xi_minus_xk = []\n",
+    "xis= []\n",
+    "xi2s = []\n",
+    "xi3s = []\n",
+    "xi4s = []\n",
     "ys = []\n",
     "y2s = []\n",
+    "y3s = []\n",
+    "y4s = []\n",
+    "\n",
     "precision, scale = precision_and_scale(k_steps)\n",
     "def choose_k(t, dt, _k_steps):\n",
     "  global _idx\n",
@@ -2044,24 +2043,37 @@
     "            np.random.uniform(0, N - 1, size=N), 0\n",
     "        ).astype(int)\n",
     "\n",
+    "def sample(t, xi, *args):\n",
+    "    D, n = args\n",
+    "    return D * np.sqrt(n) * (np.mean(sc.get_sample_means(n, opinions=xi)) - np.mean(xi))\n",
+    "\n",
     "for t in np.arange(0, T, dt):\n",
-    "  choose_k(t, dt, k_steps)\n",
-    "  xi_minus_xk.append(xi-xi[_idx])\n",
+    "    choose_k(t, dt, k_steps)\n",
+    "    xi_minus_xk.append(xi-xi[_idx])\n",
+    "    y = nudge*np.tanh(alpha_2 * (xi-xi[_idx]))*dt\n",
+    "    xi += y\n",
+    "    y2 = nudge*np.tanh(alpha_2 * xi[_idx])*dt\n",
+    "    xi2 += y2\n",
+    "    y3 = D_xi*np.random.normal(loc=0,scale=np.sqrt(dt), size=N)\n",
+    "    xi3 += y3\n",
+    "    y4 = sample(t, xi3, D_sample, sample_size)*dt\n",
+    "    xi4 += y4\n",
     "\n",
-    "  y = D*np.tanh(alpha_2*(xi-xi[_idx]))*dt\n",
-    "  xi += y\n",
-    "  y2 = D2*np.random.normal(loc=0,scale=np.sqrt(dt), size=N)\n",
-    "  xi2 += y2\n",
-    "\n",
-    "  ys.append(y)\n",
-    "  y2s.append(y2)\n",
+    "    ys.append(y)\n",
+    "    y2s.append(y2)\n",
+    "    y3s.append(y3)\n",
+    "    y4s.append(y4)\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, sharey=True,\n",
     "                        gridspec_kw=dict(width_ratios=[1,1,0.1]))\n",
     "axs[0].scatter(xi_minus_xk, ys,     s=10, ec='None', c='k', alpha=0.5/n_iter)\n",
     "axs[0].scatter(xi_minus_xk, y2s,    s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
+    "axs[0].scatter(xi_minus_xk, y3s,    s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
+    "axs[0].scatter(xi_minus_xk, y4s,    s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
     "axs[1].scatter([xi]*len(ys), ys,   s=10, ec='None', c='k', alpha=0.5/n_iter)\n",
-    "axs[1].scatter([xi]*len(y2s), y2s, s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
+    "axs[1].scatter([xi2]*len(y2s), y2s, s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
+    "axs[1].scatter([xi3]*len(y3s), y3s, s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
+    "axs[1].scatter([xi4]*len(y4s), y4s, s=10, ec='None', c='c', alpha=0.5/n_iter)\n",
     "sns.kdeplot(y, ax=axs[2], color='k', vertical=True, shade=True)\n",
     "sns.kdeplot(y2, ax=axs[2], color='c', vertical=True, shade=True)\n",
     "\n",
