minor bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -1779,7 +1779,7 @@
    },
    "outputs": [],
    "source": [
-    "g = show_noise_grid(df, list(other_vars.keys()),\n",
+    "g = show_noise_grid(df, [x for x in other_vars.keys() if x != \"D\"],\n",
     "                    grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
     "g.map(sns.scatterplot, \"opinion\", \"D\", color='k', alpha=0.5, ec='None', s=1)"
    ]
@@ -1948,6 +1948,7 @@
     }
    ],
    "source": [
+    "#@title CLT { run: \"auto\", vertical-output: true }\n",
     "# polar opinions\n",
     "num_agents = 1000\n",
     "m = 10\n",
@@ -1961,6 +1962,7 @@
     "dt = 0.01\n",
     "T = 10\n",
     "\n",
+    "# Nudge arguments\n",
     "D = 20 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
     "sample_size = 50 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "\n",
