minor bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -1952,29 +1952,28 @@
     "# polar opinions\n",
     "num_agents = 1000\n",
     "m = 10\n",
-    "alpha = 3\n",
+    "α = 0\n",
     "K = 3\n",
-    "epsilon = 1e-2\n",
-    "gamma = 2.1\n",
-    "beta = 3\n",
+    "ε = 1e-2\n",
+    "Υ = 2.1\n",
+    "β = 3\n",
     "r = 0.5\n",
     "activity_distribution = negpowerlaw\n",
     "dt = 0.01\n",
     "T = 10\n",
-    "\n",
     "# Nudge arguments\n",
-    "D = 20 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
-    "sample_size = 50 #@param {type:\"slider\", min:1, max:100, step:1}\n",
+    "D = 3 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
+    "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "\n",
-    "iterations = 5 #@param {type:\"slider\", min:1, max:20, step:1}\n",
+    "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
     "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
     "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
     "for i in range(iterations):\n",
-    "    sc = SampleChamber(num_agents, m, K, alpha)\n",
-    "    sc.set_activities(activity_distribution, gamma, epsilon)\n",
-    "    sc.set_connection_probabilities(beta)\n",
+    "    sc = SampleChamber(num_agents, m, K, α)\n",
+    "    sc.set_activities(activity_distribution, Υ, ε)\n",
+    "    sc.set_connection_probabilities(β)\n",
     "    sc.set_social_interactions(r)\n",
     "    sc.set_dynamics(D, sample_size)\n",
     "    sc.run_network(dt, T, method='Euler')\n",
@@ -1985,6 +1984,87 @@
     "                             kde_kws=dict(bw=0.1, color=palette[i]))\n",
     "\n",
     "ax[0].set_ylim(-5,5)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "logging_level = logging.getLogger().getEffectiveLevel()\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
+    "kwargs = dict(N=1000,\n",
+    "              m=10,\n",
+    "              T=10,\n",
+    "              epsilon=1e-2,\n",
+    "              gamma=2.1,\n",
+    "              dt=0.01,\n",
+    "              K=2,\n",
+    "              beta=1,\n",
+    "              alpha=3,\n",
+    "              r=0.65,\n",
+    "              k_steps=10,\n",
+    "              cls=SampleChamber\n",
+    "             )\n",
+    "\n",
+    "D_range = np.round(np.arange(0.0, 5, 1), 3)\n",
+    "\n",
+    "other_vars = {\n",
+    "    'D':{\n",
+    "        'range': D_range,\n",
+    "        'title': 'D',\n",
+    "    },\n",
+    "    'sample_size':{\n",
+    "        'range':[0.01, 0.1, 1, 10],\n",
+    "        'title':'$n$',\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "noise_start = 0\n",
+    "\n",
+    "df = Simulation.run_product(other_vars,\n",
+    "                            noise_start=noise_start,\n",
+    "                            **kwargs)\n",
+    "logging.getLogger().setLevel(logging_level)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grid_kwargs = dict(sharex=False, sharey=False, margin_titles=True, legend_out=True)\n",
+    "kde_kwargs = dict(bw=0.01)\n",
+    "g = show_noise_grid(df, ['D','sample_size'], grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "g.add_legend(fontsize='large')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "g = show_noise_grid(df, [x for x in other_vars.keys() if x != \"D\"],\n",
+    "                    grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "g.map(sns.scatterplot, \"opinion\", \"D\", color='k', alpha=0.5, ec='None', s=1)"
    ],
    "metadata": {
     "collapsed": false,
