minor bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Depolarization-of-opinions\" data-toc-modified-id=\"Depolarization-of-opinions-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Depolarization of opinions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Colab-Setup\" data-toc-modified-id=\"Colab-Setup-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Colab Setup</a></span></li><li><span><a href=\"#Imports-and-settings\" data-toc-modified-id=\"Imports-and-settings-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Imports and settings</a></span></li></ul></li><li><span><a href=\"#Example-usage\" data-toc-modified-id=\"Example-usage-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Example usage</a></span><ul class=\"toc-item\"><li><span><a href=\"#Parameters\" data-toc-modified-id=\"Parameters-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Parameters</a></span></li><li><span><a href=\"#Create-EchoChamber\" data-toc-modified-id=\"Create-EchoChamber-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Create EchoChamber</a></span></li><li><span><a href=\"#Set-activity-based-on-powerlaw-distribution\" data-toc-modified-id=\"Set-activity-based-on-powerlaw-distribution-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Set activity based on powerlaw distribution</a></span></li><li><span><a href=\"#Connection-probabilities\" data-toc-modified-id=\"Connection-probabilities-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Connection probabilities</a></span></li><li><span><a href=\"#Social-Interactions\" data-toc-modified-id=\"Social-Interactions-2.5\"><span class=\"toc-item-num\">2.5&nbsp;&nbsp;</span>Social Interactions</a></span></li><li><span><a href=\"#Dynamics\" data-toc-modified-id=\"Dynamics-2.6\"><span class=\"toc-item-num\">2.6&nbsp;&nbsp;</span>Dynamics</a></span></li><li><span><a href=\"#Run-and-plot-results\" data-toc-modified-id=\"Run-and-plot-results-2.7\"><span class=\"toc-item-num\">2.7&nbsp;&nbsp;</span>Run and plot results</a></span></li><li><span><a href=\"#Save/Load\" data-toc-modified-id=\"Save/Load-2.8\"><span class=\"toc-item-num\">2.8&nbsp;&nbsp;</span>Save/Load</a></span></li></ul></li><li><span><a href=\"#Example-results\" data-toc-modified-id=\"Example-results-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Example results</a></span><ul class=\"toc-item\"><li><span><a href=\"#Neutral-opinion\" data-toc-modified-id=\"Neutral-opinion-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Neutral opinion</a></span></li><li><span><a href=\"#Radicalisation-of-opinions\" data-toc-modified-id=\"Radicalisation-of-opinions-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Radicalisation of opinions</a></span></li><li><span><a href=\"#Polarisation-of-opinions\" data-toc-modified-id=\"Polarisation-of-opinions-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Polarisation of opinions</a></span></li><li><span><a href=\"#Compare-opinons\" data-toc-modified-id=\"Compare-opinons-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Compare opinons</a></span></li></ul></li><li><span><a href=\"#Plot-types\" data-toc-modified-id=\"Plot-types-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Plot types</a></span><ul class=\"toc-item\"><li><span><a href=\"#$K-\\alpha$-phase-space\" data-toc-modified-id=\"$K-\\alpha$-phase-space-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>$K-\\alpha$ phase space</a></span></li><li><span><a href=\"#Activity-vs-Opinion\" data-toc-modified-id=\"Activity-vs-Opinion-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Activity vs Opinion</a></span></li><li><span><a href=\"#Show-adjacency-matrix\" data-toc-modified-id=\"Show-adjacency-matrix-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Show adjacency matrix</a></span></li><li><span><a href=\"#Agent-opinons-at-$t$\" data-toc-modified-id=\"Agent-opinons-at-$t$-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Agent opinons at $t$</a></span></li><li><span><a href=\"#Nearest-Neighbour\" data-toc-modified-id=\"Nearest-Neighbour-4.5\"><span class=\"toc-item-num\">4.5&nbsp;&nbsp;</span>Nearest Neighbour</a></span></li></ul></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Summary</a></span></li><li><span><a href=\"#Noisy-Echo-Chamber\" data-toc-modified-id=\"Noisy-Echo-Chamber-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Noisy Echo Chamber</a></span><ul class=\"toc-item\"><li><span><a href=\"#Check-dt-with-noise\" data-toc-modified-id=\"Check-dt-with-noise-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Check <code>dt</code> with noise</a></span></li><li><span><a href=\"#Params-vs-noise\" data-toc-modified-id=\"Params-vs-noise-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Params vs noise</a></span><ul class=\"toc-item\"><li><span><a href=\"#$T_D-=-0$\" data-toc-modified-id=\"$T_D-=-0$-6.2.1\"><span class=\"toc-item-num\">6.2.1&nbsp;&nbsp;</span>$T_D = 0$</a></span></li><li><span><a href=\"#$T_D-=-10$\" data-toc-modified-id=\"$T_D-=-10$-6.2.2\"><span class=\"toc-item-num\">6.2.2&nbsp;&nbsp;</span>$T_D = 10$</a></span></li></ul></li><li><span><a href=\"#Delayed-noise\" data-toc-modified-id=\"Delayed-noise-6.3\"><span class=\"toc-item-num\">6.3&nbsp;&nbsp;</span>Delayed noise</a></span></li></ul></li><li><span><a href=\"#Internal-noise\" data-toc-modified-id=\"Internal-noise-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Internal noise</a></span><ul class=\"toc-item\"><li><span><a href=\"#Params-vs-noise\" data-toc-modified-id=\"Params-vs-noise-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>Params vs noise</a></span></li><li><span><a href=\"#Delayed-noise\" data-toc-modified-id=\"Delayed-noise-7.2\"><span class=\"toc-item-num\">7.2&nbsp;&nbsp;</span>Delayed noise</a></span></li></ul></li><li><span><a href=\"#TODO:-Using-Julia\" data-toc-modified-id=\"TODO:-Using-Julia-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>TODO: Using Julia</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Julia-Issues\" data-toc-modified-id=\"Julia-Issues-8.0.1\"><span class=\"toc-item-num\">8.0.1&nbsp;&nbsp;</span>Julia Issues</a></span></li></ul></li></ul></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Depolarization of opinions"
@@ -1949,10 +1939,14 @@
    ],
    "source": [
     "#@title CLT { run: \"auto\", vertical-output: true }\n",
+    "\n",
+    "logging_level = logging.getLogger().getEffectiveLevel()\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
+    "\n",
     "# polar opinions\n",
     "num_agents = 1000\n",
     "m = 10\n",
-    "α = 0\n",
+    "α = 3\n",
     "K = 3\n",
     "ε = 1e-2\n",
     "Υ = 2.1\n",
@@ -1983,7 +1977,9 @@
     "    vis.show_opinions_snapshot(ax=ax[1], vertical=True,\n",
     "                             kde_kws=dict(bw=0.1, color=palette[i]))\n",
     "\n",
-    "ax[0].set_ylim(-5,5)\n"
+    "ax[0].set_ylim(-5,5)\n",
+    "\n",
+    "logging.getLogger().setLevel(logging_level)"
    ],
    "metadata": {
     "collapsed": false,
